--- a/OpenHASWeb/views/logged_in_layout.jade
+++ b/OpenHASWeb/views/logged_in_layout.jade
@@ -27,7 +27,7 @@ block masterContent
                 i.fa.fa-cubes.fa-fw
                 |  Nodes
             li
-              a(href='/')
+              a(href='/rules')
                 i.fa.fa-list.fa-fw
                 |  Rules
             li
