--- a/OpenHASWeb/views/includes/common_header.jade
+++ b/OpenHASWeb/views/includes/common_header.jade
@@ -6,7 +6,7 @@ link(href='/template/dist/css/timeline.css', rel='stylesheet')
 // Custom CSS
 link(href='/template/dist/css/sb-admin-2.css', rel='stylesheet')
 // Morris Charts CSS
-link(href='/template/bower_components/morrisjs/morris.css', rel='stylesheet')
+//link(href='/template/bower_components/morrisjs/morris.css', rel='stylesheet')
 // Custom Fonts
 link(href='/template/bower_components/font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
 
@@ -17,7 +17,7 @@ script(src='/template/bower_components/bootstrap/dist/js/bootstrap.min.js')
 script(src='/template/bower_components/metisMenu/dist/metisMenu.min.js')
 // Morris Charts JavaScript
 script(src='/template/bower_components/raphael/raphael-min.js')
-script(src='/template/bower_components/morrisjs/morris.min.js')
-script(src='/template/js/morris-data.js')
+//script(src='/template/bower_components/morrisjs/morris.min.js')
+//script(src='/template/js/morris-data.js')
 // Custom Theme JavaScript
 script(src='/template/dist/js/sb-admin-2.js')
