--- a/OpenHASWeb/views/rules.jade
+++ b/OpenHASWeb/views/rules.jade
@@ -27,10 +27,10 @@ block content
           for currentRule in rules
             tr
               td
-                input#ruleEnabled(name='#{currentRule._id}', type='checkbox',data-size='mini', data-on-color='success', onSwitchChange='this.onSwitchChanged', data-state='#{currentRule.enabled}')
+                input.ruleEnabled(name='#{currentRule._id}', type='checkbox',data-size='mini', data-on-color='success', onSwitchChange='this.onSwitchChanged', data-state='#{currentRule.enabled}')
               td #{currentRule.ruleName}
               td
-                a(href='#')
+                a(href='/rules/#{currentRule._id}/delete')
                   i.fa.fa-trash.fa-fw
-                a(href='#')
+                a(href='/rules/#{currentRule._id}/copy')
                   i.fa.fa-files-o.fa-fw
