Basic support for adding and listing nodes are included.

--- a/OpenHASWeb/views/logged_in_layout.jade
+++ b/OpenHASWeb/views/logged_in_layout.jade
@@ -23,7 +23,7 @@ block masterContent
                 i.fa.fa-dashboard.fa-fw
                 |  Dashboard
             li
-              a(href='/')
+              a(href='/nodes')
                 i.fa.fa-cubes.fa-fw
                 |  Nodes
             li
