--- a/OpenHASWeb/views/nodes.jade
+++ b/OpenHASWeb/views/nodes.jade
@@ -2,7 +2,7 @@ extends logged_in_layout
 block header
   link(href='/template/bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.min.css', rel='stylesheet')
   script(src='/template/bower_components/bootstrap-switch/dist/js/bootstrap-switch.min.js')
-  //script(src='/javascripts/rules_ui.js')
+  script(src='/javascripts/nodes_ui.js')
 block content
   .row
     .col-md-12
@@ -12,13 +12,15 @@ block content
   .row
     for currentNode in nodes
       .col-lg-3.col-md-6
-        .panel.panel-green
+        .panel.panel-green.nodeElement(data-nodeId='#{currentNode._id}', data-refreshRate='#{currentNode.refreshRate}')
           .panel-heading
             .row
               .col-xs-3
                 i.fa.fa-tasks.fa-5x
               .col-xs-9.text-right
-                .huge -- #{currentNode.measurementUnit}
+                .huge
+                  span(id='#{currentNode._id}') --
+                  |  #{currentNode.measurementUnit}
                 div #{currentNode.nodeName}
           .panel-footer
             a(href='/nodes/#{currentNode._id}/edit')
