Nodes now can be added to the dashboard and data is displayed on them

--- a/OpenHASWeb/views/node_editor.jade
+++ b/OpenHASWeb/views/node_editor.jade
@@ -1,4 +1,8 @@
 extends logged_in_layout
+block header
+  link(href='/template/bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.min.css', rel='stylesheet')
+  script(src='/template/bower_components/bootstrap-switch/dist/js/bootstrap-switch.min.js')
+  script(src='/javascripts/node_editor_ui.js')
 block content
   .row
     .col-lg-12
@@ -8,26 +12,30 @@ block content
 
   form.form-horizontal(method='POST')
     .form-group
-      label.col-sm-2.control-label Node name
+      label.col-sm-3.control-label Node name
       .col-sm-6
         input.form-control(name='nodeName', type='text', placeholder='The name of the node which will be visible on the widget. Like Kitchen', value='#{viewModel.nodeName}')
     .form-group
-      label.col-sm-2.control-label Node address
+      label.col-sm-3.control-label Node address
       .col-sm-6
         input.form-control(name='nodeAddress', type='text', placeholder='The address of the node in the following format: xbee:AABBCCDDEEFF', value='#{viewModel.nodeAddress}')
     .form-group
-      label.col-sm-2.control-label Displayed parameter index
+      label.col-sm-3.control-label Displayed parameter index
       .col-sm-6
         input.form-control(name='parameterIndex', type='number', placeholder='The index of the parameter to display, like 1', value='#{viewModel.parameterIndex}')
     .form-group
-      label.col-sm-2.control-label Measurement unit
+      label.col-sm-3.control-label Measurement unit
       .col-sm-6
         input.form-control(name='measurementUnit', type='text', placeholder='The measurement unit of the displayed parameter, like °C', value='#{viewModel.measurementUnit}')
     .form-group
-      label.col-sm-2.control-label Refresh rate (seconds)
+      label.col-sm-3.control-label Refresh rate (seconds)
       .col-sm-6
         input.form-control(name='refreshRate', type='number', min='5', placeholder='How often the widget should be refreshed, in seconds. Minimum 5 seconds', value='#{viewModel.refreshRate}')
+    .form-group
+      label.col-sm-3.control-label Should be displayed on dashboard
+      .col-sm-6
+        input.favouriteSwitch(name='favourite', type='checkbox',data-size='normal', data-on-color='success', data-state='#{viewModel.favourite}', data-on-text='YES', data-off-text='NO')
 
     .form-group
-      .col-sm-offset-2.col-sm-10
+      .col-sm-offset-3.col-sm-10
         button.btn.btn-primary(type='submit') Save
