--- a/OpenHASWeb/views/index.jade
+++ b/OpenHASWeb/views/index.jade
@@ -1,4 +1,6 @@
 extends logged_in_layout
+block header
+  script(src='/javascripts/nodes_ui.js')
 
 block content
   .row
@@ -6,48 +8,22 @@ block content
       h1.page-header Dashboard
 
   .row
-    .col-lg-3.col-md-6
-      .panel.panel-green
-        .panel-heading
-          .row
-            .col-xs-3
-              i.fa.fa-tasks.fa-5x
-            .col-xs-9.text-right
-              .huge 26 °C
-              div Kitchen
-        a(href='#')
-          .panel-footer
-            span.pull-left View Details
-            span.pull-right
-              i.fa.fa-arrow-circle-right
-            .clearfix
-    .col-lg-3.col-md-6
-      .panel.panel-green
-        .panel-heading
-          .row
-            .col-xs-3
-              i.fa.fa-tasks.fa-5x
-            .col-xs-9.text-right
-              .huge 24 °C
-              div Living room
-        a(href='#')
-          .panel-footer
-            span.pull-left View Details
-            span.pull-right
-              i.fa.fa-arrow-circle-right
-            .clearfix
-    .col-lg-3.col-md-6
-      .panel.panel-yellow
-        .panel-heading
-          .row
-            .col-xs-3
-              i.fa.fa-bolt.fa-5x
-            .col-xs-9.text-right
-              .huge ON
-              div Heating
-        a(href='#')
-          .panel-footer
-            span.pull-left View Details
-            span.pull-right
-              i.fa.fa-arrow-circle-right
-            .clearfix
+    for currentNode in nodes
+      .col-lg-3.col-md-6
+        .panel.panel-green.nodeElement(data-nodeId='#{currentNode._id}', data-refreshRate='#{currentNode.refreshRate}')
+          .panel-heading
+            .row
+              .col-xs-3
+                i.fa.fa-tasks.fa-5x
+              .col-xs-9.text-right
+                .huge
+                  span(id='#{currentNode._id}') --
+                    |  #{currentNode.measurementUnit}
+                div #{currentNode.nodeName}
+          a(href='#')
+            .panel-footer
+              span.pull-left View Details
+              span.pull-right
+                i.fa.fa-arrow-circle-right
+              .clearfix
+
