Tweaking the side menu

--- a/OpenHASWeb/views/logged_in_layout.jade
+++ b/OpenHASWeb/views/logged_in_layout.jade
@@ -19,7 +19,7 @@ block masterContent
         .sidebar-nav.navbar-collapse
           ul#side-menu.nav.in
             li
-              a.active(href='/')
+              a(href='/dashboard')
                 i.fa.fa-dashboard.fa-fw
                 |  Dashboard
             li
@@ -31,7 +31,7 @@ block masterContent
                 i.fa.fa-list.fa-fw
                 |  Rules
             li
-              a(href='/')
+              a(href='/settings')
                 i.fa.fa-cogs.fa-fw
                 |  Settings
     #page-wrapper
