--- a/OpenHASWeb/views/includes/common_header.jade
+++ b/OpenHASWeb/views/includes/common_header.jade
@@ -9,6 +9,7 @@ link(href='/template/dist/css/sb-admin-2.css', rel='stylesheet')
 //link(href='/template/bower_components/morrisjs/morris.css', rel='stylesheet')
 // Custom Fonts
 link(href='/template/bower_components/font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
+link(href='/template/bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.min.css', rel='stylesheet')
 
 script(src='/template/bower_components/jquery/dist/jquery.min.js')
 // Bootstrap Core JavaScript
@@ -21,3 +22,4 @@ script(src='/template/bower_components/raphael/raphael-min.js')
 //script(src='/template/js/morris-data.js')
 // Custom Theme JavaScript
 script(src='/template/dist/js/sb-admin-2.js')
+script(src='/template/bower_components/bootstrap-switch/dist/js/bootstrap-switch.min.js')
