--- a/OpenHASWeb/views/logged_in_layout.jade
+++ b/OpenHASWeb/views/logged_in_layout.jade
@@ -1,5 +1,9 @@
 extends basic_layout
 
+block pre-header
+
+  script(src='/javascripts/main.js')
+
 block masterContent
   div.wrapper
     nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bottom: 0')
@@ -11,6 +15,16 @@ block masterContent
           span.icon-bar
         a.navbar-brand(href='/') OpenHAS
       ul.nav.navbar-top-links.navbar-right
+
+        li.dropdown
+          a.dropdown-toggle(data-toggle='dropdown', href='#') Manual mode
+          ul.dropdown-menu.dropdown-tasks
+            li
+              div
+                strong Manual override
+              div
+                | If the switch is on, all rules are disabled
+                input.manualSwitch(type='checkbox', data-state='true',data-size='mini')
         li
           a(href='/auth/logout')
             i.fa.fa-sign-out.fa-fw
