--- a/OpenHASWeb/views/node_editor.jade
+++ b/OpenHASWeb/views/node_editor.jade
@@ -1,5 +1,7 @@
 extends logged_in_layout
 block header
+  script(type='text/javascript').
+    var viewModel =!{JSON.stringify(viewModel)};
   script(src='/javascripts/node_editor_ui.js')
 block content
   .row
@@ -13,8 +15,8 @@ block content
       label.col-sm-3.control-label Node type
       .col-sm-6
         select.form-control(name='nodeType', data-value='#{viewModel.nodeType}')
-          option Sensor
-          option Actuator
+          for currentNodeType in viewModel.nodeTypes
+            option #{currentNodeType.name}
     .form-group
       label.col-sm-3.control-label Node name
       .col-sm-6
@@ -23,18 +25,17 @@ block content
       label.col-sm-3.control-label Node address
       .col-sm-6
         input.form-control(name='nodeAddress', type='text', placeholder='The address of the node in the following format: xbee:AABBCCDDEEFF', value='#{viewModel.nodeAddress}')
+
     .form-group
-      label.col-sm-3.control-label Displayed parameter index
+      label.col-sm-3.control-label Displayed parameter
       .col-sm-6
-        input.form-control(name='parameterIndex', type='number', placeholder='The index of the parameter to display, like 1', value='#{viewModel.parameterIndex}')
+        select.form-control(name='getterFunction', data-value='#{viewModel.getterFunction}')
+
     .form-group
-      label.col-sm-3.control-label Measurement unit
+      label.col-sm-3.control-label Parameter to send
       .col-sm-6
-        input.form-control(name='measurementUnit', type='text', placeholder='The measurement unit of the displayed parameter, like °C', value='#{viewModel.measurementUnit}')
-    .form-group
-      label.col-sm-3.control-label Refresh rate (seconds)
-      .col-sm-6
-        input.form-control(name='refreshRate', type='number', min='5', placeholder='How often the widget should be refreshed, in seconds. Minimum 5 seconds', value='#{viewModel.refreshRate}')
+        select.form-control(name='setterFunction', data-value='#{viewModel.setterFunction}')
+
     .form-group
       label.col-sm-3.control-label Should be displayed on dashboard
       .col-sm-6
