Variables are now supported

--- a/OpenHASWeb/views/logged_in_layout.jade
+++ b/OpenHASWeb/views/logged_in_layout.jade
@@ -45,6 +45,10 @@ block masterContent
                 i.fa.fa-list.fa-fw
                 |  Rules
             li
+              a(href='/variables')
+                i.fa.fa-database.fa-fw
+                |  Variables
+            li
               a(href='/settings')
                 i.fa.fa-cogs.fa-fw
                 |  Settings
