--- a/OpenHASWeb/views/rule_editor.jade
+++ b/OpenHASWeb/views/rule_editor.jade
@@ -26,6 +26,11 @@ block content
       .col-sm-6
         textarea.form-control(rows='3', name='action')
           |#{viewModel.action}
+    .form-group
+      label.col-sm-2.control-label Negative Action
+      .col-sm-6
+        textarea.form-control(rows='3', name='negativeAction')
+          | #{viewModel.negativeAction}
       .col-sm-2.text-center Insert an action
         select.form-control
           option setVariable
