--- a/OpenHASWeb/views/settings.jade
+++ b/OpenHASWeb/views/settings.jade
@@ -4,7 +4,7 @@ block content
   .row
     .col-lg-12
       h1.page-header Settings
-  form.form-horizontal(method='POST')
+  form.form-horizontal(method='POST',action='/settings/mqtt')
     .col-sm-4
       span.help-block In this section you can set the username and the password on the MQTT broker. Clients have to use this username and password to connect to the broker.
     .row
@@ -17,7 +17,7 @@ block content
     .form-group
       label.col-sm-3.control-label MQTT password
       .col-sm-6
-        input.form-control(name='mqtt_password', type='password', value='#{viewModel.mqtt_password}')
+        input.form-control(name='mqtt_password', type='text', value='#{viewModel.mqtt_password}')
 
     .form-group
       .col-sm-offset-3.col-sm-10
