Ordering on dashboard now working Displaying the last update date

--- a/OpenHASWeb/views/includes/node/node_body_input.jade
+++ b/OpenHASWeb/views/includes/node/node_body_input.jade
@@ -3,6 +3,6 @@
     i.fa.fa-tasks.fa-5x
   .col-xs-9.text-right
     .huge
-      span(id='#{currentNode._id}') --
+      span.value(id='#{currentNode._id}') --
       |  ℃
     div #{currentNode.nodeName}
