--- a/OpenHASWeb/views/index.jade
+++ b/OpenHASWeb/views/index.jade
@@ -13,4 +13,7 @@ block content
   .row
     for currentNode in viewModel.nodes
       include includes/node/node_main
-
+  .row
+    .col-lg-3.col-md-6
+      h1 Sensor map
+      img(src="/images/temperature_sensor_map_web.png")
