Report generator working

--- a/OpenHASWeb/views/node_detail.jade
+++ b/OpenHASWeb/views/node_detail.jade
@@ -34,7 +34,7 @@ block content
                 th Minimum
                 th Average
                 th Maximum
-                th Number of meas.
+                th Number of measurements
                 th First measurement
                 th Last measurement
             tbody
