--- a/OpenHASWeb/views/node_editor.jade
+++ b/OpenHASWeb/views/node_editor.jade
@@ -47,5 +47,15 @@ block content
         input.form-control(name='calibrationFactor', value='#{viewModel.calibrationFactor}')
 
     .form-group
+      label.col-sm-3.control-label Lower limit
+      .col-sm-6
+        input.form-control(name='lowerLimit', value='#{viewModel.lowerLimit}')
+
+    .form-group
+      label.col-sm-3.control-label Upper limit
+      .col-sm-6
+        input.form-control(name='upperLimit', value='#{viewModel.upperLimit}')
+
+    .form-group
       .col-sm-offset-3.col-sm-10
         button.btn.btn-primary(type='submit') Save
